--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="./output.css" rel="stylesheet" />
-    <link href="./styles.css" rel="stylesheet" />
+    <link href="./src/output.css" rel="stylesheet" />
+    <link href="./src/styles.css" rel="stylesheet" />
   </head>
   <body class="body text-[15px]">
     <div class="bg-teal-600">
       <img class="lg:hidden" src="./images/bg-header-mobile.svg" alt="" />
       <img
         class="hidden lg:block"
-        src="./images//bg-header-desktop.svg"
+        src="./images/bg-header-desktop.svg"
         alt=""
       />
     </div>
@@ -46,7 +46,7 @@
       class="px-[30px] mt-[40px] flex flex-col gap-[30px] lg:px-[150px]"
     ></div>
 
-    <script src="data.js"></script>
-    <script src="script.js"></script>
+    <script src="./src/data.js"></script>
+    <script src="./src/script.js"></script>
   </body>
 </html>
